--- a/publication/index.html
+++ b/publication/index.html
@@ -574,6 +574,13 @@
 
 
 
+
+  
+
+
+
+
+
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.7275/b92s-qd21" target="_blank" rel="noopener">
   DOI
 </a>
@@ -583,8 +590,26 @@
 
 
 
+<button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
+        data-filename="/publication/chavesrichter2021/cite.bib">
+  Cite
+</button>
 
-  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -610,12 +635,6 @@
 
 
 
-
-
-<button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
-        data-filename="/publication/chavesrichter2021/cite.bib">
-  Cite
-</button>
 
 
 
@@ -675,12 +694,15 @@
 
 
 
-  
+
+
   
     
   
+
+
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://www.researchgate.net/publication/343268482_Investigating_the_Role_of_Verb_Frequency_in_Factive_and_Manner-of-speaking_Islands" target="_blank" rel="noopener">
-  Preprint
+  PDF
 </a>
 
 
@@ -690,7 +712,23 @@
 
 
 
-  
+
+<button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
+        data-filename="/publication/richterchaves2020/cite.bib">
+  Cite
+</button>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -714,6 +752,10 @@
 
 
 
+
+
+
+
   
   
     
@@ -724,12 +766,6 @@
 
 
 
-
-
-<button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
-        data-filename="/publication/richterchaves2020/cite.bib">
-  Cite
-</button>
 
 
 
