--- a/publication/richterchaves2020/index.html
+++ b/publication/richterchaves2020/index.html
@@ -581,12 +581,15 @@
 
 
 
-  
+
+
   
     
   
+
+
 <a class="btn btn-outline-primary my-1 mr-1" href="https://www.researchgate.net/publication/343268482_Investigating_the_Role_of_Verb_Frequency_in_Factive_and_Manner-of-speaking_Islands" target="_blank" rel="noopener">
-  Preprint
+  PDF
 </a>
 
 
@@ -596,7 +599,23 @@
 
 
 
-  
+
+<button type="button" class="btn btn-outline-primary my-1 mr-1 js-cite-modal"
+        data-filename="/publication/richterchaves2020/cite.bib">
+  Cite
+</button>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -620,6 +639,10 @@
 
 
 
+
+
+
+
   
   
     
@@ -630,12 +653,6 @@
 
 
 
-
-
-<button type="button" class="btn btn-outline-primary my-1 mr-1 js-cite-modal"
-        data-filename="/publication/richterchaves2020/cite.bib">
-  Cite
-</button>
 
 
 
