--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
     
     <h1>Hello!</h1>
 
-    <p>I&rsquo;ve recently earned a Master&rsquo;s from UB, where I studied computational linguistics. Starting Fall 2021, I begin my PhD in Linguistics at the University of Rochester.</p>
+    <p>I&rsquo;m a PhD student in Linguistics at the University of Rochester, where I work (or will work) largely under the <a href="http://factslab.io/">Formal And CompuTational Semantics lab (FACTS.lab).</a></p>
 <p>I&rsquo;m interested broadly in syntax and semantics, and computational models for understanding natural language. I am also interested in NLP tasks involving low-resource languages, and ways in which the analysis of them may be improved through linguistic knowledge.</p>
 
 
