--- a/index.html
+++ b/index.html
@@ -615,8 +615,8 @@
     
     <h1>Hello!</h1>
 
-    <p>I&rsquo;m a PhD student in Linguistics at the University of Rochester, where I work (or will work) largely under the <a href="http://factslab.io/">Formal And 
-      Semantics lab (FACTS.lab).</a></p>
+    <p>I&rsquo;m a PhD student in Linguistics at the University of Rochester, where I work (or will work) largely in the <a href="http://factslab.io/">Formal And 
+      Semantics lab (FACTS.lab)</a> headed by Aaron White.</p>
 <p>I&rsquo;m interested broadly in syntax and semantics, and computational models for understanding natural language. I am also interested in NLP tasks involving low-resource languages, and ways in which the analysis of them may be improved through linguistic knowledge.</p>
 
 
