--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
     <h1>Hello!</h1>
 
     <p>I&rsquo;m a PhD student in Linguistics at the University of Rochester, where I work (or will work) largely in the <a href="http://factslab.io/">Formal And 
-      Semantics lab (FACTS.lab)</a> headed by Aaron White.</p>
+      SemanTics lab (FACTS.lab)</a> headed by Aaron White.</p>
 <p>I&rsquo;m interested broadly in syntax and semantics, and computational models for understanding natural language. I am also interested in NLP tasks involving low-resource languages, and ways in which the analysis of them may be improved through linguistic knowledge.</p>
 
 
