--- a/experiments/3/0-1110XX.html
+++ b/experiments/3/0-1110XX.html
@@ -697,7 +697,7 @@ window.onload = init;
     </p>
 
     <p>
-      A few of the questions in this task will contain sets of sentences that obviously do not go together, or sentences that sound obviously extremely unnatural or perfectly natural.
+      A few of the questions in this task will contain sentences that sound obviously extremely unnatural or perfectly natural.
       These are questions we already know the answers to. If you
       are paying attention, you are certain to get these questions right. <i>If you answer a majority of these such questions wrong, then you risk
       being rejected from the HIT.</i>
